Add Master Term

--- a/siak/web/WEB-INF/i3-label.properties
+++ b/siak/web/WEB-INF/i3-label.properties
@@ -333,6 +333,7 @@ menu_Item_MasterGrade=Master Grade
 menu_Item_MasterHari=Master Hari
 menu_Item_MasterJenjang=Master Jenjang
 menu_Item_MasterKegiatan=Master Kegiatan
+menu_Item_MasterTerm=Master Term
 menu_Item_MasterKalenderKegiatanAkademik=Master Kalender Kegiatan Akademik
 menu_Item_UpdateKonsentrasiMahasiswa=Update Konsentrasi Mahasiswa
 menu_Item_UpdateStatusMahasiswa=Update Status Mahasiswa
