--- a/trunk/siak/web/WEB-INF/i3-label.properties
+++ b/trunk/siak/web/WEB-INF/i3-label.properties
@@ -1181,4 +1181,6 @@ menu_Item_FeedbackInstansi=Feedback Instansi
 menu_Item_Feedback=Feedback
 menu_Item_FeedbackAlumni=Feedback Alumni
 menu_Item_Peminatan=Peminatan
+menu_Item_FeedbackDosen=Feedback Dosen
+menu_Item_FeedbackWisudawan=Feedback Wisudawan
 
