--- a/trunk/siak/web/WEB-INF/i3-label.properties
+++ b/trunk/siak/web/WEB-INF/i3-label.properties
@@ -334,6 +334,7 @@ menu_Item_MasterHari=Master Hari
 menu_Item_MasterJenjang=Master Jenjang
 menu_Item_MasterKegiatan=Master Kegiatan
 menu_Item_MasterTerm=Master Term
+menu_Item_MasterThajar=Master Tahun Ajaran
 menu_Item_MasterKalenderKegiatanAkademik=Master Kalender Kegiatan Akademik
 menu_Item_UpdateKonsentrasiMahasiswa=Update Konsentrasi Mahasiswa
 menu_Item_UpdateStatusMahasiswa=Update Status Mahasiswa
